# QTchat

./: CMakeLists.txt  README.md  config.ini
Resources/: rc.qrc  styles.qss
Sources/: Bubble.cpp  ChatItem.cpp  ChatUserList.cpp  ChatView.cpp  ClickedButton.cpp  ClickedLabel.cpp  HttpManager.cpp  ListItem.cpp  MessageTextEdit.cpp  TcpManager.cpp  UserManager.cpp  chatdialog.cpp  chatpage.cpp  global.cpp  loadingdialog.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  myedit.cpp  registerdialog.cpp  resetdialog.cpp  timerbutton.cpp  widgetchatuser.cpp
Sources/Forms/: chatdialog.ui  chatpage.ui  loadingdialog.ui  logindialog.ui  mainwindow.ui  myedit.ui  registerdialog.ui  resetdialog.ui  widgetchatuser.ui
Sources/Headers/: ChatItem.h  ChatUserList.h  ChatView.h  ClickedButton.h  ClickedLabel.h  HttpManager.h  ListItem.h  MessageTextEdit.h  TcpManager.h  UserManager.h  chatdialog.h  chatpage.h  global.h  loadingdialog.h  logindialog.h  mainwindow.h  myedit.h  registerdialog.h  resetdialog.h  singleton.hpp  timerbutton.h  widgetchatuser.h
